testdata/fixtures/negative/public-api-bloat/pkg/axle/server.go
package axle

import "net/http"

func Serve(w http.ResponseWriter) { w.WriteHeader(http.StatusOK) }
